add nueva animacion

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -67,36 +67,37 @@
       display: flex;
       width: 100%;
       align-items: center;
-      justify-content: space-evenly;
       flex-direction: column;
-      height: 90vh;
+      height: 85vh;
+      gap: 0.5em;
 
       h1 {
         color: #000;
         text-align: center;
         font-family: MargoBeuys;
-        font-size: calc(1px + 4.5vw);
+        font-size: calc(1px + 4vw);
         font-style: normal;
-        font-weight: 600;
+        font-weight: 400;
         line-height: 136%;
         text-transform: uppercase;
 
         strong {
           color: #000000;
           font-family: "Bodoni Moda", serif;
-          font-size: calc(1px + 4.5vw);
+          font-size: calc(1px + 4vw);
           font-style: italic;
-          font-weight: 700;
+          font-weight: 100;
           line-height: 136%;
           text-transform: uppercase;
         }
       }
 
       p {
+        
         color: #252525;
         text-align: center;
         font-family: poppins;
-        font-size: 18px;
+        font-size: 15px;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
@@ -145,6 +146,7 @@
       }
 
       .cont_barra_contadores {
+        margin-top: 1em;
         display: flex;
         padding: 22px 20px;
         flex-direction: row;
@@ -208,7 +210,7 @@
     width: 100vw;
     height: 120vh;
     overflow: hidden;
-    background: #ededed;
+    background: #ffffff;
 
     .bold_uno {
       position: absolute;
@@ -236,13 +238,13 @@
       width: 100vw;
       height: 100%;
       background: repeating-radial-gradient(
-            rgba(255, 230, 6, 0.2) 0 0.0001%,
-            #d1d1d146 0 0.0002%
+            rgba(255, 255, 255, 0.192) 0 0.0001%,
+            #f1f1f146 0 0.0002%
           )
           60% 60%/3000px 3000px,
         repeating-conic-gradient(
-            rgba(255, 230, 6, 0.2) 0 0.0001%,
-            #d1d1d146 0 0.0002%
+            rgba(255, 255, 255, 0.2) 0 0.0001%,
+            #f1f1f146 0 0.0002%
           )
           40% 40%/3000px 3000px;
       background-blend-mode: difference;
@@ -1669,7 +1671,7 @@
         width: 50vw;
         height: 60vh;
         transform: skew(15deg);
-        background: rgb(251, 255, 0);
+        background: rgb(255, 255, 255);
         img {
           height: 100%;
         }
