--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -341,6 +341,7 @@
   /* #####################   SECTION TRES ############################# */
 
   .cont_aboutme {
+    scroll-behavior: smooth;
     display: flex;
     flex-direction: column;
     margin: 20em 5em 5em 5em;
