--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -80,6 +80,18 @@
             flex-shrink: 0;
         }
 
+        .columdosdev {
+            width: 50%;
+            height: 100%;
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .imgdev{
+                width: 65%;
+            }
+        }
+
         .columdosuxw {
             width: 50%;
             height: 100%;
@@ -275,6 +287,19 @@
                 width: 100%;
                 height: 50%;
             }
+
+            .columdosdev {
+                width: 100%;
+                height: 50%;
+                flex-shrink: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .imgdev{
+                    width: 100%;
+                }
+            }
+
             .columdosuxw {
                 width: 100%;
                 height: 50%;
