--- a/style/sass.css
+++ b/style/sass.css
@@ -1912,6 +1912,17 @@ p {
   height: 100%;
   flex-shrink: 0;
 }
+.body_plantilla .cont_inicio .columdosdev {
+  width: 50%;
+  height: 100%;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.body_plantilla .cont_inicio .columdosdev .imgdev {
+  width: 65%;
+}
 .body_plantilla .cont_inicio .columdosuxw {
   width: 50%;
   height: 100%;
@@ -2077,6 +2088,17 @@ p {
   .body_plantilla .cont_inicio .columdos {
     width: 100%;
     height: 50%;
+  }
+  .body_plantilla .cont_inicio .columdosdev {
+    width: 100%;
+    height: 50%;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .body_plantilla .cont_inicio .columdosdev .imgdev {
+    width: 100%;
   }
   .body_plantilla .cont_inicio .columdosuxw {
     width: 100%;
