--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -75,7 +75,7 @@
         color: #000;
         text-align: center;
         font-family: MargoBeuys;
-        font-size: calc(1px + 4vw);
+        font-size: calc(1px + 6vw);
         font-style: normal;
         font-weight: 400;
         line-height: 136%;
@@ -84,7 +84,7 @@
         strong {
           color: #000000;
           font-family: "Bodoni Moda", serif;
-          font-size: calc(1px + 4vw);
+          font-size: calc(1px + 6vw);
           font-style: italic;
           font-weight: 100;
           line-height: 136%;
@@ -127,6 +127,10 @@
           line-height: normal;
         }
 
+        .boton_setion_uno_see:hover {
+          cursor: url("../assets/img/ver.svg") 40 10, auto;
+        }
+
         .boton_setion_uno_contac {
           display: flex;
           width: 10em;
@@ -143,18 +147,21 @@
           border-radius: 10px;
           background: #141414;
         }
+
+        .boton_setion_uno_contac:hover {
+          cursor: url("../assets/img/ir.svg") 15 10, auto;
+        }
       }
 
       .cont_barra_contadores {
         margin-top: 1em;
         display: flex;
-        padding: 22px 20px;
+        padding: 0px 0px;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         gap: 20px;
         border-radius: 20px;
-        border: 1px solid #fff;
         background: rgba(255, 255, 255, 0.05);
         backdrop-filter: blur(50px);
 
@@ -162,9 +169,16 @@
           display: flex;
           align-items: center;
           gap: 10px;
+          flex-direction: column;
+          width: 130px;
+          padding: 20px;
+          flex-direction: column;
+          justify-content: center;
+          flex-shrink: 0;
+          align-self: stretch;
+          border-radius: 10px;
+          background: #F6F6F6;
 
-          img {
-          }
 
           h4 {
             color: #252525;
@@ -203,6 +217,7 @@
   }
 
   .fondo_inicio {
+    display: none;
     position: absolute;
     z-index: -10;
     top: 0px;
@@ -344,7 +359,7 @@
     scroll-behavior: smooth;
     display: flex;
     flex-direction: column;
-    margin: 20em 5em 5em 5em;
+    margin: 20em 5em 0em 5em;
 
     .cont_titulo_aboutme {
       display: inline-flex;
@@ -482,6 +497,7 @@
   .mis_servicios {
     display: flex;
     flex-direction: column;
+
 
     .cont_titulo_mis_servicios {
       display: inline-flex;
@@ -3355,11 +3371,11 @@
         display: flex;
         width: 100%;
         align-items: center;
-        gap: calc(1px + 1vh);
+        gap: calc(1px + 20vw);
         justify-content: none;
         gap: 1em;
         flex-direction: column;
-        height: 80vh;
+        height: 70vh;
 
         h1 {
           margin-top: 1em;
@@ -3389,7 +3405,7 @@
           color: #1d1d1d;
           text-align: center;
           font-family: poppins;
-          font-size: calc(1px + 4vw);
+          font-size: calc(1px + 3vw);
           font-style: normal;
           font-weight: 400;
           line-height: normal;
@@ -3442,7 +3458,7 @@
           width: 100%;
           display: flex;
           padding: 18px 15px;
-          flex-direction: column;
+          flex-direction: row;
           justify-content: center;
           align-items: start;
           gap: 10px;
@@ -3456,14 +3472,11 @@
             align-items: center;
             gap: 10px;
 
-            img {
-              width: calc(1px + 11vw);
-            }
 
             h4 {
               color: #1d1d1d;
               font-family: MargoBeuys;
-              font-size: calc(1px + 7vw);
+              font-size: calc(1px + 6vw);
               font-style: normal;
               font-weight: 500;
               line-height: 74%;
@@ -3473,8 +3486,8 @@
 
             p {
               color: #1d1d1d;
-              font-family: MargoBeuys;
-              font-size: calc(1px + 5vw);
+              font-family: poppins;
+              font-size: calc(1px + 3vw);
               font-style: normal;
               font-weight: 400;
               line-height: 100%;
@@ -4228,13 +4241,13 @@
         align-items: center;
 
         .titulo_bandera {
-          margin-left: 2em;
-          margin-right: 2em;
+          margin-left: 0.5em;
+          margin-right: 0.5em;
           position: absolute;
           color: #000000;
           text-align: center;
           font-family: Sora;
-          font-size: calc(1px + 4vh);
+          font-size: calc(1px + 9vw);
           font-style: normal;
           font-weight: 900;
           line-height: 115.5%;
