--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -92,6 +92,19 @@
             }
         }
 
+        .columdosres {
+            width: 50%;
+            height: 100%;
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .imgres{
+                width: 65%;
+            }
+        }
+
+
         .columdosuxw {
             width: 50%;
             height: 100%;
@@ -289,6 +302,18 @@
             }
 
             .columdosdev {
+                width: 100%;
+                height: 50%;
+                flex-shrink: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .imgres{
+                    width: 100%;
+                }
+            }
+
+            .columdosres {
                 width: 100%;
                 height: 50%;
                 flex-shrink: 0;
