--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -61,111 +61,125 @@
   /* #####################   SECTION UNO ############################# */
   .conten_setion_uno {
     position: relative;
-    margin: 0px 0em 0px 0em;
+    margin: 0px 5em 0px 5em;
 
     .titulo_setion_uno {
       display: flex;
       width: 100%;
-      align-items: center;
+      align-items: start;
       flex-direction: column;
-      height: 90vh;
+      height: 100vh;
       gap: 0.5em;
 
       h1 {
         color: #000;
-        text-align: center;
+        text-align: start;
         font-family: MargoBeuys;
-        font-size: calc(1px + 7vw);
+        font-size: calc(1px + 10vw);
         font-style: normal;
         font-weight: 400;
-        line-height: 136%;
+        line-height: 110%;
         text-transform: uppercase;
 
         strong {
           color: #000000;
           font-family: MargoBeuys;
-          font-size: calc(1px + 7vw);
+          font-size: calc(1px + 10vw);
           font-style: normal;
-          font-weight: 100;
-          line-height: 136%;
+          font-weight: 400;
+          line-height: 110%;
           text-transform: uppercase;
         }
       }
 
-      p {
-        display: flex;
-        color: #252525;
-        text-align: center;
-        font-family: poppins;
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: normal;
-        padding-bottom: 10px;
-      }
-
-      .boton_setion_uno {
-        display: flex;
-        flex-direction: row;
-        gap: 1em;
-
-        .boton_setion_uno_see {
-          display: flex;
-          width: 10em;
-          padding: 10px;
-          justify-content: center;
-          align-items: center;
-          gap: 10px;
-          border-radius: 10px;
-          border: 1px solid #24252b;
-          background: #ffffff;
-          color: #000;
-          font-family: Gotham;
-          font-size: 15px;
-          font-style: normal;
-          font-weight: 300;
-          line-height: normal;
-        }
-
-        .boton_setion_uno_see:hover {
-          cursor: url("../assets/img/ver.svg") 40 10, auto;
-        }
-
-        .boton_setion_uno_contac {
-          display: flex;
-          width: 10em;
-          padding: 10px;
-          justify-content: center;
-          align-items: center;
-          gap: 10px;
-          color: #fff;
-          font-family: poppins;
-          font-size: 15px;
-          font-style: normal;
-          font-weight: 300;
-          line-height: normal;
-          border-radius: 10px;
-          background: #141414;
-        }
-
-        .boton_setion_uno_contac:hover {
-          cursor: url("../assets/img/ir.svg") 15 10, auto;
-        }
-      }
-
       .cont_barra_contadores {
-        margin-top: 1em;
+        margin-top: 2em;
         display: flex;
-        padding: 0px 0px;
         flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        border-radius: 20px;
-        background: rgba(255, 255, 255, 0.05);
-        backdrop-filter: blur(50px);
+        justify-content: start;
+        align-items: start;
+        gap: 2em;
+        width: 100%;
+        img{
+          width: 8%;
+        }
 
-        div {
+        .cont_parrafo_contadores {
+          display: flex;
+          flex-direction: column;
+          align-items: start;
+          padding: 20px;
+          flex-direction: column;
+          justify-content: center;
+          flex-shrink: 0;
+          align-self: stretch;
+          border-radius: 10px;
+          background: #f6f6f6;
+
+          .parrafo {
+            color: #252525;
+            text-align: start;
+            font-family: poppins;
+            font-size: calc(1px + 1vw);
+            font-style: normal;
+            font-weight: 400;
+            line-height: 110%;
+            padding-bottom: 10px;
+          }
+
+          .boton_setion_uno {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            gap: 1em;
+            justify-content: start;
+
+            .boton_setion_uno_see {
+              display: flex;
+              width: 10em;
+              padding: 10px;
+              justify-content: center;
+              align-items: center;
+              gap: 10px;
+              border-radius: 10px;
+              border: 1px solid #24252b;
+              background: #ffffff;
+              color: #000;
+              font-family: Gotham;
+              font-size: 15px;
+              font-style: normal;
+              font-weight: 300;
+              line-height: normal;
+            }
+
+            .boton_setion_uno_see:hover {
+              cursor: url("../assets/img/ver.svg") 40 10, auto;
+            }
+
+            .boton_setion_uno_contac {
+              display: flex;
+              width: 10em;
+              padding: 10px;
+              justify-content: center;
+              align-items: center;
+              gap: 10px;
+              color: #fff;
+              font-family: poppins;
+              font-size: 15px;
+              font-style: normal;
+              font-weight: 300;
+              line-height: normal;
+              border-radius: 10px;
+              background: #141414;
+            }
+
+            .boton_setion_uno_contac:hover {
+              cursor: url("../assets/img/ir.svg") 15 10, auto;
+            }
+          }
+        }
+
+        .contador_cont {
           display: flex;
           align-items: center;
           gap: 10px;
@@ -177,8 +191,7 @@
           flex-shrink: 0;
           align-self: stretch;
           border-radius: 10px;
-          background: #F6F6F6;
-
+          background: #f6f6f6;
 
           h4 {
             color: #252525;
@@ -187,8 +200,6 @@
             font-style: normal;
             font-weight: 500;
             line-height: 74%;
-            /* 25.9px */
-            letter-spacing: 0.35px;
           }
 
           p {
@@ -199,10 +210,10 @@
             font-size: calc(1px + 1vw);
             font-style: normal;
             font-weight: 400;
-            /* 15px */
-            letter-spacing: 0px;
           }
         }
+
+
       }
     }
   }
@@ -301,7 +312,7 @@
       flex-shrink: 0;
       box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.322);
       overflow: hidden;
-      background: #FFE900;
+      background: #ffe900;
 
       .slide-track {
         -webkit-animation: 60s linear infinite;
@@ -498,7 +509,6 @@
   .mis_servicios {
     display: flex;
     flex-direction: column;
-
 
     .cont_titulo_mis_servicios {
       display: inline-flex;
@@ -1122,11 +1132,9 @@
   /* #####################   SECTION OCHO ############################# */
 
   .capa_contenedora {
-
     display: flex;
 
     .cont_horizontal_ocho {
-
       display: flex;
       width: 100%;
       flex-direction: column;
@@ -1136,38 +1144,36 @@
         display: flex;
         width: 100vw;
         height: 100vh;
-        justify-content:space-evenly;
+        justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
-        .conte_titulo{
+        .conte_titulo {
           overflow: hidden;
-          
-          .titulouno{
+
+          .titulouno {
             transform: translateY(2vw);
-            color:#000000;
-            text-align:center;
-            font-size:calc(1px + 1vw);
-            font-family:poppins;
+            color: #000000;
+            text-align: center;
+            font-size: calc(1px + 1vw);
+            font-family: poppins;
           }
         }
 
-        .cont_subtitulo_mis_horizontal{
+        .cont_subtitulo_mis_horizontal {
           overflow: hidden;
 
-          .subtitulo_aboutme{
+          .subtitulo_aboutme {
             transform: translateY(16vw);
-            color:#000000;
-            text-align:center;
-            font-size:calc(1px + 16vw);
-            font-family:Margo + Beuys;
+            color: #000000;
+            text-align: center;
+            font-size: calc(1px + 16vw);
+            font-family: Margo + Beuys;
           }
         }
-
-
       }
 
       .cont_horizontal_dos {
-        position:absolute;
+        position: absolute;
         bottom: -100vh;
         z-index: 0;
         width: 100vw;
@@ -1280,7 +1286,7 @@
       }
 
       .cont_horizontal_tres {
-        position:absolute;
+        position: absolute;
         bottom: -100vh;
         z-index: 2;
         width: 100vw;
@@ -1392,7 +1398,7 @@
       }
 
       .cont_horizontal_cuatro {
-        position:absolute;
+        position: absolute;
         bottom: -100vh;
         z-index: 3;
         width: 100vw;
@@ -1502,10 +1508,10 @@
             cursor: url("../assets/img/irb.svg") 15 10, auto;
           }
         }
-      }      
+      }
 
       .cont_horizontal_cinco {
-        position:absolute;
+        position: absolute;
         bottom: -100vh;
         z-index: 4;
         width: 100vw;
@@ -1615,20 +1621,17 @@
           }
         }
       }
-
     }
   }
 
   /* #####################   SECTION OCHO ############################# */
   .conte_pilares {
-
     .contenedor_de_animaciones {
       width: 100vw;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: start;
-
 
       .cont_animacion {
         width: 100vw;
@@ -1665,21 +1668,21 @@
         }
         .fondo_negro {
           top: 50vh;
-        z-index: -4;
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        background: #171717;
-        border-radius: 100%;
+          z-index: -4;
+          position: absolute;
+          width: 1px;
+          height: 1px;
+          background: #171717;
+          border-radius: 100%;
         }
         .fondo_blanco {
           top: 50vh;
-        z-index: -2;
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        background: #ffffff;
-        border-radius: 100%;
+          z-index: -2;
+          position: absolute;
+          width: 1px;
+          height: 1px;
+          background: #ffffff;
+          border-radius: 100%;
         }
         .fondo_negro_dos {
           top: 50vh;
@@ -1689,17 +1692,17 @@
           height: 1px;
           background: #171717;
           border-radius: 100%;
-          }
+        }
       }
 
       .cont_texto {
         padding: 2em 5em 2em 5em;
-        position:absolute;
+        position: absolute;
         width: 100%;
         height: 100vh;
         display: flex;
         flex-direction: column;
-        justify-content:space-between;
+        justify-content: space-between;
         .contenedor_texto {
           width: 100%;
           display: flex;
@@ -1759,12 +1762,12 @@
 
       .cont_texto_dos {
         padding: 2em 5em 2em 5em;
-        position:absolute;
+        position: absolute;
         width: 100%;
         height: 100vh;
         display: flex;
         flex-direction: column;
-        justify-content:space-between;
+        justify-content: space-between;
         .contenedor_texto {
           width: 100%;
           display: flex;
@@ -1823,12 +1826,12 @@
 
       .cont_texto_tres {
         padding: 2em 5em 2em 5em;
-        position:absolute;
+        position: absolute;
         width: 100%;
         height: 100vh;
         display: flex;
         flex-direction: column;
-        justify-content:space-between;
+        justify-content: space-between;
         .contenedor_texto {
           width: 100%;
           display: flex;
@@ -1884,7 +1887,6 @@
           }
         }
       }
-
     }
   }
 
@@ -1976,8 +1978,6 @@
   }
 }
 
-
-
 @media (max-width: 720px) {
   .body__index {
     .conta_scroll_boton {
@@ -2038,7 +2038,6 @@
 
     /* #####################   SECTION UNO ############################# */
     .conten_setion_uno {
-      
       position: relative;
       margin: 0px 1em 0px 1em;
 
@@ -2146,7 +2145,6 @@
             display: flex;
             align-items: center;
             gap: 10px;
-
 
             h4 {
               color: #1d1d1d;
@@ -2330,7 +2328,6 @@
     /* #####################   SECTION TRES ############################# */
 
     .cont_aboutme {
-
       flex-direction: column;
       margin: 20em 1em 1em 1em;
 
@@ -3185,51 +3182,46 @@
 
     /* #####################   SECTION OCHO ############################# */
 
-
     .capa_contenedora {
       overflow: hidden;
       display: flex;
 
       .cont_horizontal_ocho {
         display: flex;
-        flex-direction: column;        
+        flex-direction: column;
         .cont_horizontal_uno {
           z-index: -1;
           display: flex;
           width: 100vw;
           height: 100vh;
-          justify-content:center;
+          justify-content: center;
           align-items: center;
           flex-direction: column;
-          .conte_titulo{
+          .conte_titulo {
             overflow: hidden;
-            
-            .titulouno{
+
+            .titulouno {
               transform: translateY(3vw);
-              color:#000000;
-              text-align:center;
+              color: #000000;
+              text-align: center;
 
-              font-size:calc(1px + 3vw);
-              font-family:poppins;
-
+              font-size: calc(1px + 3vw);
+              font-family: poppins;
             }
           }
-  
-          .cont_subtitulo_mis_horizontal{
+
+          .cont_subtitulo_mis_horizontal {
             overflow: hidden;
-  
-            .subtitulo_aboutme{
-              transform: translateY(16vw);
-              color:#000000;
-              text-align:center;
-              vertical-align:text-top;
-              font-size:calc(1px + 16vw);
-              font-family:Margo + Beuys;
 
+            .subtitulo_aboutme {
+              transform: translateY(16vw);
+              color: #000000;
+              text-align: center;
+              vertical-align: text-top;
+              font-size: calc(1px + 16vw);
+              font-family: Margo + Beuys;
             }
           }
-  
-  
         }
 
         .cont_horizontal_dos {
@@ -3667,22 +3659,19 @@
             }
           }
         }
-
       }
     }
 
     /* #####################   SECTION OCHO ############################# */
 
     .conte_pilares {
-
       .contenedor_de_animaciones {
         width: 100vw;
         height: 100vh;
         display: flex;
         justify-content: center;
         align-items: start;
-  
-  
+
         .cont_animacion {
           width: 100vw;
           height: 120vh;
@@ -3692,7 +3681,7 @@
           justify-content: center;
           align-content: center;
           overflow: hidden;
-  
+
           .cont_animacion_uno {
             opacity: 0%;
             top: 0vh;
@@ -3704,7 +3693,7 @@
             top: 25vh;
             position: absolute;
             z-index: -1;
-            .lottie_dos{
+            .lottie_dos {
               width: 100%;
             }
           }
@@ -3720,22 +3709,22 @@
             z-index: 0;
           }
           .fondo_negro {
-          top: 50vh;
-          z-index: -4;
-          position: absolute;
-          width: 1px;
-          height: 1px;
-          background: #171717;
-          border-radius: 100%;
+            top: 50vh;
+            z-index: -4;
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            background: #171717;
+            border-radius: 100%;
           }
           .fondo_blanco {
             top: 50vh;
-          z-index: -2;
-          position: absolute;
-          width: 1px;
-          height: 1px;
-          background: #ffffff;
-          border-radius: 100%;
+            z-index: -2;
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            background: #ffffff;
+            border-radius: 100%;
           }
           .fondo_negro_dos {
             top: 50vh;
@@ -3745,17 +3734,17 @@
             height: 1px;
             background: #171717;
             border-radius: 100%;
-            }
+          }
         }
-  
+
         .cont_texto {
           padding: 2em 2em 2em 2em;
-          position:absolute;
+          position: absolute;
           width: 100%;
           height: 100vh;
           display: flex;
           flex-direction: column;
-          justify-content:space-between;
+          justify-content: space-between;
           .contenedor_texto {
             width: 100%;
             display: flex;
@@ -3811,15 +3800,15 @@
             }
           }
         }
-  
+
         .cont_texto_dos {
           padding: 2em 2em 2em 2em;
-          position:absolute;
+          position: absolute;
           width: 100%;
           height: 100vh;
           display: flex;
           flex-direction: column;
-          justify-content:space-between;
+          justify-content: space-between;
           .contenedor_texto {
             width: 100%;
             display: flex;
@@ -3875,15 +3864,15 @@
             }
           }
         }
-  
+
         .cont_texto_tres {
           padding: 2em 2em 2em 2em;
-          position:absolute;
+          position: absolute;
           width: 100%;
           height: 100vh;
           display: flex;
           flex-direction: column;
-          justify-content:space-between;
+          justify-content: space-between;
           .contenedor_texto {
             width: 100%;
             display: flex;
@@ -3939,12 +3928,10 @@
             }
           }
         }
-  
       }
     }
 
     .cont_reel_diagonal {
-
       width: 100vw;
       height: 100vh;
       background: #171717;
