--- a/style/sass.css
+++ b/style/sass.css
@@ -2245,52 +2245,77 @@ p {
 }
 .body__index .conten_setion_uno {
   position: relative;
-  margin: 0px 0em 0px 0em;
+  margin: 0px 5em 0px 5em;
 }
 .body__index .conten_setion_uno .titulo_setion_uno {
   display: flex;
   width: 100%;
-  align-items: center;
+  align-items: start;
   flex-direction: column;
-  height: 90vh;
+  height: 100vh;
   gap: 0.5em;
 }
 .body__index .conten_setion_uno .titulo_setion_uno h1 {
   color: #000;
-  text-align: center;
+  text-align: start;
   font-family: MargoBeuys;
-  font-size: calc(1px + 7vw);
+  font-size: calc(1px + 10vw);
   font-style: normal;
   font-weight: 400;
-  line-height: 136%;
+  line-height: 110%;
   text-transform: uppercase;
 }
 .body__index .conten_setion_uno .titulo_setion_uno h1 strong {
   color: #000000;
   font-family: MargoBeuys;
-  font-size: calc(1px + 7vw);
+  font-size: calc(1px + 10vw);
   font-style: normal;
-  font-weight: 100;
-  line-height: 136%;
+  font-weight: 400;
+  line-height: 110%;
   text-transform: uppercase;
 }
-.body__index .conten_setion_uno .titulo_setion_uno p {
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores {
+  margin-top: 2em;
   display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: start;
+  gap: 2em;
+  width: 100%;
+}
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores img {
+  width: 8%;
+}
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  align-self: stretch;
+  border-radius: 10px;
+  background: #f6f6f6;
+}
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .parrafo {
   color: #252525;
-  text-align: center;
+  text-align: start;
   font-family: poppins;
-  font-size: 15px;
+  font-size: calc(1px + 1vw);
   font-style: normal;
-  font-weight: 300;
-  line-height: normal;
+  font-weight: 400;
+  line-height: 110%;
   padding-bottom: 10px;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno {
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .boton_setion_uno {
+  width: 100%;
   display: flex;
   flex-direction: row;
   gap: 1em;
+  justify-content: start;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_see {
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .boton_setion_uno .boton_setion_uno_see {
   display: flex;
   width: 10em;
   padding: 10px;
@@ -2307,10 +2332,10 @@ p {
   font-weight: 300;
   line-height: normal;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_see:hover {
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .boton_setion_uno .boton_setion_uno_see:hover {
   cursor: url("../assets/img/ver.svg") 40 10, auto;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_contac {
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .boton_setion_uno .boton_setion_uno_contac {
   display: flex;
   width: 10em;
   padding: 10px;
@@ -2326,23 +2351,10 @@ p {
   border-radius: 10px;
   background: #141414;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_contac:hover {
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .boton_setion_uno .boton_setion_uno_contac:hover {
   cursor: url("../assets/img/ir.svg") 15 10, auto;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores {
-  margin-top: 1em;
-  display: flex;
-  padding: 0px 0px;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  border-radius: 20px;
-  background: rgba(255, 255, 255, 0.05);
-  -webkit-backdrop-filter: blur(50px);
-          backdrop-filter: blur(50px);
-}
-.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores div {
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -2354,19 +2366,17 @@ p {
   flex-shrink: 0;
   align-self: stretch;
   border-radius: 10px;
-  background: #F6F6F6;
+  background: #f6f6f6;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores div h4 {
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont h4 {
   color: #252525;
   font-family: MargoBeuys;
   font-size: calc(1px + 2.5vw);
   font-style: normal;
   font-weight: 500;
   line-height: 74%;
-  /* 25.9px */
-  letter-spacing: 0.35px;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores div p {
+.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont p {
   display: flex;
   padding: 0px;
   color: #252525;
@@ -2374,8 +2384,6 @@ p {
   font-size: calc(1px + 1vw);
   font-style: normal;
   font-weight: 400;
-  /* 15px */
-  letter-spacing: 0px;
 }
 .body__index .grilla {
   position: absolute;
@@ -2455,7 +2463,7 @@ p {
   flex-shrink: 0;
   box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.322);
   overflow: hidden;
-  background: #FFE900;
+  background: #ffe900;
 }
 .body__index .cont_cinta_inicio .slider_inicio .slide-track {
   animation: 60s linear infinite;
