--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -408,7 +408,7 @@
 
         .context_subtitulo {
           color: #000;
-          font-family: MargoBeuys;
+          font-family: poppins;
           font-size: calc(1px + 1vw);
           font-style: normal;
           font-weight: 300;
@@ -491,7 +491,7 @@
             .contenido_contenido {
               color: #000;
               font-family: poppins;
-              font-size: 15px;
+              font-size: calc(1px + 1vw);
               font-style: normal;
               font-weight: 300;
               line-height: 138.5%;
@@ -545,7 +545,7 @@
 
         .context_subtitulo {
           color: #000;
-          font-family: Sora;
+          font-family: poppins;
           font-size: calc(1px + 1.1vw);
           font-style: normal;
           font-weight: 300;
@@ -771,10 +771,10 @@
 
       .context_subtitulo {
         color: #000;
-        font-family: Sora;
+        font-family: poppins;
         font-size: 15px;
         font-style: normal;
-        font-weight: 250;
+        font-weight: 300;
         line-height: 138.5%;
         /* 20.775px */
         letter-spacing: 0.75px;
@@ -858,7 +858,7 @@
           color: #000;
           text-align: justify;
           font-family: poppins;
-          font-size: 15px;
+          font-size: calc(1px + 1vw);
           font-style: normal;
           font-weight: 400;
           line-height: 136%;
@@ -2045,28 +2045,28 @@
         display: flex;
         width: 100%;
         align-items: center;
-        gap: calc(1px + 20vw);
+        gap: calc(1px + 0vw);
         justify-content: none;
         gap: 1em;
         flex-direction: column;
-        height: 70vh;
+        height: 75vh;
 
         h1 {
-          margin-top: 1em;
+          margin-top: 0em;
           color: #1d1d1d;
           text-align: center;
           font-family: MargoBeuys;
-          font-size: calc(1px + 10vw);
+          font-size: calc(1px + 12vw);
           font-style: normal;
           font-weight: 600;
-          line-height: 136%;
+          line-height: 110%;
           text-transform: uppercase;
           text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
 
           strong {
             color: #1d1d1d;
             font-family: "Bodoni Moda", serif;
-            font-size: calc(1px + 10vw);
+            font-size: calc(1px + 12vw);
             font-style: italic;
             font-weight: 700;
             line-height: 136%;
@@ -2075,76 +2075,111 @@
           }
         }
 
-        p {
-          color: #1d1d1d;
-          text-align: center;
-          font-family: poppins;
-          font-size: calc(1px + 3vw);
-          font-style: normal;
-          font-weight: 400;
-          line-height: normal;
-          padding-bottom: 10px;
-          text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
-        }
 
-        .boton_setion_uno {
-          display: flex;
-          flex-direction: row;
-          gap: 1em;
-
-          .boton_setion_uno_see {
-            display: flex;
-            width: 10em;
-            padding: 10px;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            border-radius: 10px;
-            border: 1px solid #24252b;
-            background: #ffffff;
-            color: #000;
-            font-family: Gotham;
-            font-size: 15px;
-            font-style: normal;
-            font-weight: 300;
-            line-height: normal;
-          }
-
-          .boton_setion_uno_contac {
-            display: flex;
-            width: 10em;
-            padding: 10px;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            color: #fff;
-            font-family: poppins;
-            font-size: 15px;
-            font-style: normal;
-            font-weight: 300;
-            line-height: normal;
-            border-radius: 10px;
-            background: #141414;
-          }
-        }
 
         .cont_barra_contadores {
           width: 100%;
-          display: flex;
-          padding: 18px 15px;
-          flex-direction: row;
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-template-rows: repeat(3,1fr);
+          padding: 0px 0px;
+          flex-direction: column;
           justify-content: center;
-          align-items: start;
+          align-items: center;
           gap: 10px;
           border-radius: 20px;
           border: 1px solid #fff;
           background: rgba(255, 255, 255, 0.05);
           backdrop-filter: blur(50px);
 
-          div {
+          .item:nth-child(1){
+            order: 1;
+          }
+
+          .item:nth-child(2){
+            order: 4;
+          }
+
+          .item:nth-child(3){
+            order: 2;
+          }
+
+          .item:nth-child(4){
+            order: 3;
+          }
+
+          img{
+            grid-area: 1 / 1 / 3 / 2; 
+            width: 100%;
+
+          }
+
+          .cont_parrafo_contadores{
+            grid-area: 3 / 1 / 4 / 3; 
+            display: flex;
+            align-items: center;
+            .parrafo {
+              color: #1d1d1d;
+              text-align: center;
+              font-family: poppins;
+              font-size: calc(1px + 2.5vw);
+              font-style: normal;
+              font-weight: 400;
+              line-height: normal;
+              padding-bottom: 10px;
+              text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
+            }
+    
+            .boton_setion_uno {
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              gap: 1em;
+    
+              .boton_setion_uno_see {
+                display: flex;
+                width: 10em;
+                padding: 10px;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+                border-radius: 10px;
+                border: 1px solid #24252b;
+                background: #ffffff;
+                color: #000;
+                font-family: Gotham;
+                font-size: 15px;
+                font-style: normal;
+                font-weight: 300;
+                line-height: normal;
+              }
+    
+              .boton_setion_uno_contac {
+                display: flex;
+                width: 10em;
+                padding: 10px;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+                color: #fff;
+                font-family: poppins;
+                font-size: 15px;
+                font-style: normal;
+                font-weight: 300;
+                line-height: normal;
+                border-radius: 10px;
+                background: #141414;
+              }
+            }
+
+          }
+
+          .contador_cont {
+            justify-content: center;
             display: flex;
             align-items: center;
             gap: 10px;
+            width: 100%;
 
             h4 {
               color: #1d1d1d;
@@ -2272,7 +2307,7 @@
         flex-shrink: 0;
         box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.322);
         overflow: hidden;
-        background: #ffffff;
+        background: #ffe900;
 
         .slide-track {
           -webkit-animation: 100s linear infinite;
@@ -2293,7 +2328,7 @@
             p {
               padding-top: 10px;
               padding-bottom: 10px;
-              color: #000;
+              color: #ffffff;
               text-align: center;
               font-family: MargoBeuys;
               font-size: calc(1px + 15vw);
@@ -2367,7 +2402,7 @@
 
           .context_subtitulo {
             color: #000;
-            font-family: MargoBeuys;
+            font-family: poppins;
             font-size: 15px;
             font-style: normal;
             font-weight: 300;
@@ -2451,7 +2486,7 @@
               .contenido_contenido {
                 color: #000;
                 font-family: poppins;
-                font-size: calc(1px + 2vh);
+                font-size: calc(1px + 1.5vh);
                 font-style: normal;
                 font-weight: 300;
                 line-height: 138.5%;
@@ -2507,7 +2542,7 @@
 
           .context_subtitulo {
             color: #000;
-            font-family: Sora;
+            font-family: poppins;
             font-size: 15px;
             text-align: start;
             font-style: normal;
@@ -2737,7 +2772,7 @@
 
         .context_subtitulo {
           color: #000;
-          font-family: Sora;
+          font-family: poppins;
           font-size: calc(1px + 2vh);
           font-style: normal;
           font-weight: 250;
@@ -2824,9 +2859,9 @@
             color: #000;
             text-align: justify;
             font-family: poppins;
-            font-size: calc(1px + 2vh);
+            font-size: calc(1px + 1.5vh);
             font-style: normal;
-            font-weight: 400;
+            font-weight: 300;
             line-height: 136%;
             text-transform: capitalize;
           }
@@ -3201,10 +3236,9 @@
             overflow: hidden;
 
             .titulouno {
-              transform: translateY(3vw);
+              transform: translateY(4vw);
               color: #000000;
               text-align: center;
-
               font-size: calc(1px + 3vw);
               font-family: poppins;
             }
@@ -3227,7 +3261,7 @@
         .cont_horizontal_dos {
           width: 100vw;
           height: 100vh;
-          background: #fcfcfc;
+          background: #111111;
           padding: 2em 1em 1em 1em;
 
           .titulo {
@@ -3236,7 +3270,7 @@
             justify-content: space-between;
 
             h3 {
-              color: #000;
+              color: #ffffff;
               font-family: Margo + Beuys;
               font-size: calc(1px + 5vh);
               font-style: normal;
@@ -3253,7 +3287,7 @@
               justify-content: center;
               align-items: center;
               flex-shrink: 0;
-              color: #000;
+              color: #ffffff;
               font-family: Margo + Beuys;
               font-size: calc(1px + 3vh);
               font-style: normal;
@@ -3261,7 +3295,7 @@
               line-height: 115.5%;
               text-transform: capitalize;
               border-radius: 89px;
-              background: #f9f9f9;
+              background: #1b1b1b;
             }
           }
 
@@ -3281,7 +3315,7 @@
                 width: 40vw;
 
                 h4 {
-                  color: #000;
+                  color: #ffffff;
                   font-family: Sora;
                   font-size: calc(1px + 3vh);
                   font-style: normal;
@@ -3300,7 +3334,7 @@
                 flex-direction: column;
 
                 .titulo_subtitulo {
-                  color: #000;
+                  color: #ffffff;
                   font-family: Margo + Beuys;
                   font-size: 20px;
                   font-style: normal;
@@ -3310,13 +3344,14 @@
                 }
 
                 img {
+                  filter: invert(100%);
                   width: 15vw;
                   height: 5vw;
                 }
               }
 
               p {
-                color: #000;
+                color: #ffffff;
                 font-family: Margo + Beuys;
                 font-size: 14px;
                 font-style: normal;
@@ -3327,7 +3362,7 @@
             }
 
             .cont_item_horizontal_dos:hover {
-              border-bottom: 2px solid #000000;
+              border-bottom: 2px solid #ffffff;
               cursor: url("../assets/img/ir.svg") 15 10, auto;
             }
           }
@@ -3445,7 +3480,7 @@
         .cont_horizontal_cuatro {
           width: 100vw;
           height: 100vh;
-          background: #fcfcfc;
+          background: #111111;
           padding: 2em 1em 1em 1em;
 
           .titulo {
@@ -3454,7 +3489,7 @@
             justify-content: space-between;
 
             h3 {
-              color: #000;
+              color: #ffffff;
               font-family: Margo + Beuys;
               font-size: calc(1px + 5vh);
               font-style: normal;
@@ -3471,7 +3506,7 @@
               justify-content: center;
               align-items: center;
               flex-shrink: 0;
-              color: #000;
+              color: #ffffff;
               font-family: Margo + Beuys;
               font-size: calc(1px + 3vh);
               font-style: normal;
@@ -3479,7 +3514,7 @@
               line-height: 115.5%;
               text-transform: capitalize;
               border-radius: 89px;
-              background: #f9f9f9;
+              background: #1b1b1b;
             }
           }
 
@@ -3499,7 +3534,7 @@
                 width: 40vw;
 
                 h4 {
-                  color: #000;
+                  color: #ffffff;
                   font-family: Sora;
                   font-size: calc(1px + 3vh);
                   font-style: normal;
@@ -3518,7 +3553,7 @@
                 flex-direction: column;
 
                 .titulo_subtitulo {
-                  color: #000;
+                  color: #ffffff;
                   font-family: Margo + Beuys;
                   font-size: 20px;
                   font-style: normal;
@@ -3528,13 +3563,14 @@
                 }
 
                 img {
+                  filter: invert(100%);
                   width: 15vw;
                   height: 5vw;
                 }
               }
 
               p {
-                color: #000;
+                color: #ffffff;
                 font-family: Margo + Beuys;
                 font-size: 14px;
                 font-style: normal;
@@ -3545,7 +3581,7 @@
             }
 
             .cont_item_horizontal_dos:hover {
-              border-bottom: 2px solid #000000;
+              border-bottom: 2px solid #ffffff;
               cursor: url("../assets/img/ir.svg") 15 10, auto;
             }
           }
